유저의 답변 가져오기 API
