# src/routes/feedback.route.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { answerSentiment, feedbackUserAnswer, getAnswerId, getQuestionId } from "../controllers/feedback.controller.js";
+import { answerSentiment, feedbackUserAnswer, getAnswerId, getQuestionId, getUserAnswer } from "../controllers/feedback.controller.js";
 import expressAsyncHandler from 'express-async-handler';
 import { get } from "http";
 
@@ -8,4 +8,4 @@ feedbackRoute.post('/user/answer',expressAsyncHandler(feedbackUserAnswer));
 feedbackRoute.post('/answer/sentiment',expressAsyncHandler(answerSentiment));
 feedbackRoute.get('/question_id',expressAsyncHandler(getQuestionId));
 feedbackRoute.get('/answer_id',expressAsyncHandler(getAnswerId));
-feedbackRoute.get('/:user_id/:book_id/answer',expressAsyncHandler(getUserAnswer));
+feedbackRoute.get('/:user_id/:question_id/answer',expressAsyncHandler(getUserAnswer));
