# swagger/feedback.swagger.yaml
@@ -303,4 +303,86 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
-                          
+  /feedback/{user_id}/{question_id}/answer:
+    get:
+      tags:
+        - Answer
+      summary: 유저의 답변 조회
+      parameters:
+        - name: user_id
+          in: path
+          schema:
+            type: bigint
+          required: true
+        - name: question_id
+          in: path
+          schema:
+            type: bigint
+          required: true
+        - name: book_id
+          in: query
+          required: false
+          schema:
+            properties:
+              content:
+                type: bigint
+      responses:
+        '200':
+          description: 답변 조회 성공
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: array
+                example: {
+                  "content": '바나나먹기',
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
+                                                    
